--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               "src/styles.scss",
               "node_modules/@ng-select/ng-select/themes/default.theme.css",
               "node_modules/primeflex/primeflex.css",
+              "node_modules/primeicons/primeicons.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
